# online_store_1.5

./: pyproject.toml
html/: catalog.html  category.html  contacts.html  main.html
src/: web.py
